<resources>
    <!-- region ANOTHER -->
    <string name="app_name">Bucket List</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_email">example@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- endregion -->

    <!-- region FRAGMENTS AND ACTIVITIES UI -->
    <string name="menu_home">Цели</string>
    <string name="menu_motivation">Мотивация</string>
    <string name="menu_settings">Настройки</string>
    <string name="save_results">Сохранить результат</string>
    <string name="hasNotGoals">Вы не поставили ни одной цели!</string>
    <string name="stateWasNotSave">Результаты не были сохранены!</string>
    <string name="existingTarget">Такая цель уже существует!</string>
    <string name="doYouWantToDeleteGoal"><b>Вы хотите удалить данную цель?</b></string>
    <string name="doYouWantToCloseApp">Вы уверены, что хотите выйти из приложения?</string>
    <string name="submitDelete">Удалить</string>
    <string name="submitCreateGoal">Сохранить</string>
    <string name="submitCloseApp">Выйти</string>
    <string name="cancelButtonText">Отмена</string>
    <string name="display">Выберите вариант отображения целей:</string>
    <string name="clickForContinue"><u>Нажмите, чтоб приступить к анкетированию</u></string>
    <string name="greetingNewUserText">Привет! Мы рады, что ты решил изменить свою жизнь! Наше приложение поможет тебе ставить цели, следить за привычками, отслеживать прогресс и сохранить мотивацию.\n\nНо перед этим пройди небольшой опрос, чтобы мы могли предложить тебе цели по твоим интересам.</string>
    <string name="addGoal">Добавьте цель</string>
    <string name="goalNameHint">Напишите название</string>
    <string name="incorrectGoal">Введите название цели, её приоритет и категорию!</string>
    <string name="logInVariants">Вы можете зарегистрироваться или войти одним из предложенных вариантов:</string>
    <string name="logInWithGoogle">Войти через Google</string>
    <string name="loginWithVK">Войти через Вконтакте</string>
    <string name="inDevProgress">Возможность войти через Вконтакте в разработке...</string>
    <string name="skipWelcomeForm"><u>Пропустить входное анкетирование</u></string>
    <string name="resetProgress"><u><b>Сбросить прогресс</b></u></string>
    <string name="doBackup"><u><b>Выполнить резервное копирование</b></u></string>
    <string name="logOut">Выйти из аккаунта</string>
    <string name="guest">Гость</string>
    <string name="vpnAttention">Внимание!\n\nПри включенном VPN регистрация и вход через ВКонтакте может работать некорректно\\не работать</string>
    <string name="douYouWantToResetProgress">Вы действительно хотите удалить все цели с телефона и из облачного хранилища?</string>
    <string name="successLogin">Вход удался!</string>
    <string name="failedLogin">Что-то пошло не так…</string>
    <string name="hasNotNetworkConnection">Отсутствует подключение к интернету!\n\nДля сохраннения новых целей выполните резервное копирование на экране Вашего аккаунта после подключения к сети</string>
    <!--endregion-->

    <!-- region ARRAYS-->
    <string-array name="goalPriorities">
        <item><i>Выберите приоритет</i></item>
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array>

    <string-array name="goalCategories">
        <item><i>Выберите категорию</i></item>
        <item>Здоровье</item>
        <item>Карьера</item>
        <item>Финансы</item>
        <item>Яркость жизни</item>
        <item>Отношения</item>
        <item>Семья и друзья</item>
        <item>Материальное</item>
        <item>Самосовершенствование</item>
        <item>Другое</item>
    </string-array>

    <string-array name="goalProgress">
        <item>Все</item>
        <item>Активные</item>
        <item>Достигнутые</item>
    </string-array>
    <!-- endregion -->

    <!-- region LOGIC CODE -->
    <string name="isUserPassedInitialQuestionnaire">isUserPassedInitialQuestionnaire</string>
    <string name="userGoalsSet">userGoalsSet</string>
    <string name="newGoalKey">newGoalKey</string>
    <string name="goalPartsSeparator">$_$</string>
    <string name="sharedPreferencesName">BucketList-Webiki</string>
    <string name="pageNumberMoreThanContentSize">Номер страницы больше либо равен количества контента:</string>
    <string name="unexpectedResultCode">Неожиданный код ответа</string>
    <string name="emptySequence">В коллекции нет элементов</string>
    <string name="tooSmallDelay">Слишком большая скорость скрытия элементов</string>
    <string name="questionsTitleKey">title</string>
    <string name="questionsAnswersKey">answers</string>
    <string name="questionsGoalsKey">goals</string>
    <string name="chosenFilterKey">CHOSEN_FILTER_KEY</string>
    <string name="collapsedCategoriesKey">COLLAPSED_CATEGORIES_KEY</string>
    <string name="questionsFileName">Questionnaire.json</string>
    <string name="motivationPhrasesFileName">MotivationPhrases.json</string>
    <string name="articlesFileName">MotivationArticleLinks.json</string>
    <string name="firebaseClientID">585629607132-7i5m19u16d3gdp388eed0t82hha92sbp.apps.googleusercontent.com</string>
    <string name="userGoalsInDatabase">userGoals</string>
    <string name="userFolderInDatabase">users</string>
    <string name="isNetworkRestoredKey">isNetworkRestoredKey</string>
    <!-- endregion    -->
</resources>