<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AccountActivity"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_account_circle"
            android:id="@+id/accountUserAvatar"
            android:layout_marginTop="24dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountUserName"
            tools:text="Name"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:text="@string/name_surname"
            android:textStyle="bold" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountUserEmail"
            tools:text="Email"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/nav_email"
            android:layout_weight="1" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountButtonBackup"
            tools:text="Delete progress"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="#777575"
            android:text="@string/doBackup"
            android:layout_marginVertical="36dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountButtonResetProgress"
            tools:text="Delete progress"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="#777575"
            android:text="@string/resetProgress" />

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountButtonLogOut"
            tools:text="Log out"
            android:text="@string/logOut"
            android:layout_marginVertical="24dp"
            android:background="@drawable/basic_button"
            style="@style/base_button_style" />
</LinearLayout>